# codetag

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  codetag-macos-arm64.spec  codetag.spec  final_binary_pack.txt  pyproject.toml  run_codetag.py
.github/workflows/: ci.yml
codetag/: __init__.py  analyzer.py  auditor.py  cli.py  complexity.py  config.py  dependencies.py  distiller.py  fs_tree.py  important.py  language_stats.py  lfs.py  licensing.py  metrics.py  models.py  packer.py  rules.yaml  secrets.py  todos.py  tree_sitter_distiller.py  tui.py
tests/: conftest.py  test_cli.py  test_dependencies.py  test_fs_tree.py  test_important.py  test_language_stats.py  test_licensing.py  test_secrets.py  test_todos.py
