[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codetag"
version = "1.1.0"
authors = [
    { name = "Lumina Mescuwa", email = "mescuwa@proton.me" },
]
description = "Analyze, pack, and distill codebases for AI and human understanding."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["cli", "tui", "developer-tools", "llm", "ai", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0",
    "gitignore-parser>=0.1",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "tiktoken>=0.5",
    "radon>=5.1",
    "tomli>=2.0; python_version<'3.11'",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/mescuwa/codetag"
"Bug Tracker" = "https://github.com/mescuwa/codetag/issues"

[project.scripts]
codetag = "codetag.cli:app"

[project.optional-dependencies]
audit = ["osv-scanner", "semgrep"]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["codetag*"]

[tool.setuptools]
include-package-data = true 